--- a/VB.Net.vbproj
+++ b/VB.Net.vbproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{559720ED-8032-4C9A-A72C-F49C9428E886}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>VB.Net.RetirementCalculator</StartupObject>
+    <StartupObject>VB.Net.IPOMenu</StartupObject>
     <RootNamespace>VB.Net</RootNamespace>
     <AssemblyName>WindowsApplication</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -264,10 +264,10 @@
     <Compile Include="[1] Input-Processing-and-Output\Counting-the-Number-of-Characters\NumberOfCharacters.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="[1] Input-Processing-and-Output\Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="[1] Input-Processing-and-Output\IPOMenu.Designer.vb">
+      <DependentUpon>IPOMenu.vb</DependentUpon>
     </Compile>
-    <Compile Include="[1] Input-Processing-and-Output\Form1.vb">
+    <Compile Include="[1] Input-Processing-and-Output\IPOMenu.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="[1] Input-Processing-and-Output\Mad-Lib\MadLib.Designer.vb">
@@ -293,8 +293,8 @@
     <EmbeddedResource Include="[1] Input-Processing-and-Output\Counting-the-Number-of-Characters\NumberOfCharacters.resx">
       <DependentUpon>NumberOfCharacters.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="[1] Input-Processing-and-Output\Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="[1] Input-Processing-and-Output\IPOMenu.resx">
+      <DependentUpon>IPOMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="[1] Input-Processing-and-Output\Mad-Lib\MadLib.resx">
       <DependentUpon>MadLib.vb</DependentUpon>
