--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,12 @@ fabric.properties
 
 # idea folder, uncomment if you don't need it
 .idea
+/.vs
+*.user
+*.cs
+*.vb
+*.exe
+*.pdb
+*.cache
+*.txt
+*.resources
