--- a/VB.Net/VB.Net.vbproj
+++ b/VB.Net/VB.Net.vbproj
@@ -10,9 +10,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\net8.0-windows10.0.22621.0\VB.Net.deps.json" />
+    <Content Include="bin\Debug\net8.0-windows10.0.22621.0\VB.Net.runtimeconfig.json" />
+    <Content Include="obj\project.assets.json" />
+    <Content Include="obj\VB.Net.vbproj.nuget.dgspec.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
     <Import Include="System.Windows.Forms" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\net8.0-windows10.0.22621.0\Microsoft.Windows.SDK.NET.dll" />
+    <None Include="bin\Debug\net8.0-windows10.0.22621.0\VB.Net.dll" />
+    <None Include="bin\Debug\net8.0-windows10.0.22621.0\VB.Net.exe" />
+    <None Include="bin\Debug\net8.0-windows10.0.22621.0\VB.Net.pdb" />
+    <None Include="bin\Debug\net8.0-windows10.0.22621.0\WinRT.Runtime.dll" />
+    <None Include="obj\project.nuget.cache" />
+    <None Include="obj\VB.Net.vbproj.nuget.g.props" />
+    <None Include="obj\VB.Net.vbproj.nuget.g.targets" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +46,10 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="bin\Release\net8.0-windows10.0.22621.0\" />
   </ItemGroup>
 
 </Project>
