--- a/.gitignore
+++ b/.gitignore
@@ -183,13 +183,9 @@ fabric.properties
 
 # idea folder, uncomment if you don't need it
 .idea
-/.vs
-*.user
-*.cs
-*.vb
-*.exe
-*.pdb
-*.cache
-*.txt
-*.resources
-/obj
+
+# Other folders
+.git
+.vs
+/C\#
+/VB.Net
